syntax = "proto3";
option go_package = "dfs/protogen/node";

message Metadata {
	string id = 1;
	uint64 totalspace = 2;
	uint64 freespace = 3;
	repeated uint64 chunks = 4;
}

message Chunk {
	uint64 id = 1;
	bytes data = 2;
	// hash will be provided by the storage node
	optional string hash = 3;
	optional uint64 size = 4;
}

message ChunkUploaded {
	uint64 id = 1;
	string hash = 2;
	uint64 size = 3;
	repeated string replicas = 4;
}

message Register {
	Metadata metadata = 1;
	string listenAddr = 2;
}

message Heartbeat {
	Metadata metadata = 1;
}

message HeartbeatResponse {
	repeated uint64 removeChunks = 1;
}

message GetChunk {
	uint64 id = 1;
}

message PutChunk {
	Chunk chunk = 1;
	// replicas contains the list of node addresses to replicate the chunk to
	repeated string replicas = 2;
}

message DeleteChunk {
	uint64 id = 1;
}

message SendChunk {
	uint64 id = 1;
	repeated string replicas = 2;
}

message SendChunks {
	repeated SendChunk chunks = 1;
}

message SendChunksResponse {
	repeated SendChunkResponse chunks = 1;
}

message SendChunkResponse {
	repeated string replicas = 1;
}
